<resources>
    <string name="app_name">Far Cry Android</string>
    <string name="launcher_title">NearChuckle - Far Cry Launcher</string>
    <string name="launcher_subtitle">Far Cry (CryEngine 1) Android port with Mesa Zink &amp; Turnip support</string>
    <string name="section_game_data">Far Cry Game Files</string>
    <string name="game_path_hint">Specify Far Cry game folder (FCData, Levels)</string>
    <string name="btn_select_folder">Select Folder</string>
    <string name="status_files_found">✓ Far Cry game files found</string>
    <string name="status_files_missing">⚠ Game files not found. Specify correct folder</string>
    <string name="folder_not_exist">⚠ Folder doesn\'t exist</string>
    <string name="folder_picker_title">Select Far Cry Game Folder</string>
    <string name="folder_picker_select">Select This Folder</string>
    <string name="folder_level_up">.. (On level above)</string>
    <string name="status_fc_found_in_folder">✔ Far Cry files detected in this folder!</string>
    <string name="status_fc_select_folder_hint">Select folder containing Far Cry game files (FCData, Levels)</string>
    <string name="section_graphics">Graphics &amp; Renderer</string>
    <string name="switch_use_zink">Mesa Zink renderer (OpenGL on Vulkan, experimental)</string>
    <string name="desc_use_zink">Off: GL4ES (OpenGL on OpenGL ES). On: Mesa draws the game on Vulkan, with the GPU driver chosen below (system or Turnip). renderer.txt in the game folder says what was used.</string>
    <string name="label_resolution">Screen Resolution:</string>
    <string name="label_fov">Field of View (FOV): %d°</string>
    <string name="switch_devmode">Developer Mode (-DEVMODE)</string>
    <string name="label_custom_args">Custom launch arguments:</string>
    <string name="label_language">Game Language:</string>
    <string name="language_auto">Automatic (device language)</string>
    <string name="desc_language">Languages found in FCData/Localized of your game files (French.pak, German.pak...)</string>
    <string name="res_auto">Automatic (Fullscreen)</string>
    <string name="res_1080p">1920x1080 (FHD)</string>
    <string name="res_720p">1280x720 (HD - Recommended)</string>
    <string name="res_540p">960x540 (qHD - For slower devices)</string>
    <string name="section_driver">GPU Driver (Turnip / Adreno)</string>
    <string name="label_active_driver">Active Vulkan Driver:</string>
    <string name="btn_install_driver_zip">Install Turnip Driver from ZIP</string>
    <string name="btn_delete_driver">Delete</string>
    <string name="switch_gpu_turbo">GPU Turbo Mode (max Adreno clocks)</string>
    <string name="desc_gpu_turbo">Locks GPU at max performance frequency via adrenotools</string>
    <string name="gpu_adreno_detected">✓ Qualcomm Adreno GPU detected</string>
    <string name="gpu_other_detected">GPU detected (Mali/PowerVR/x86)</string>
    <string name="section_controls">Controls (touch screen and gamepad)</string>
    <string name="btn_configure_controls">Configure On-Screen Controls (EDIT)</string>
    <string name="label_mouse_sensitivity">Touch screen sensitivity: %.1fx</string>
    <string name="label_controls_opacity">Controls Opacity:</string>
    <string name="switch_hide_controls">Hide touch controls (for gamepad / keyboard)</string>
    <string name="btn_launch_game">LAUNCH FAR CRY</string>
    <string name="btn_launch">Launch</string>
    <string name="title_crash_report">Far Cry Crash Report</string>
    <string name="btn_view_logs">Logs &amp; Crash Reports</string>
    <string name="btn_open_report">Open report</string>
    <string name="btn_copy_crash_report">Copy full report</string>
    <string name="btn_share_crash_report">Share</string>
    <string name="btn_clear_crash_report">Clear report</string>
    <string name="toast_report_copied">Crash report copied to clipboard!</string>
    <string name="toast_no_logs_to_copy">No logs available</string>
    <string name="dialog_crash_detected_title">Far Cry Crash Detected</string>
    <string name="dialog_crash_detected_msg">The game encountered an error during the last session. Would you like to view the report and send logs to the developer?</string>
    <string name="crash_report_diagnostic_summary">Diagnostic data and Far Cry engine logs</string>
    <string name="crash_report_hint">Click \'Copy full report\' to send it for analysis</string>
    <string name="crash_report_share_title">Send crash report via...</string>
    <string name="crash_report_cleared">(Crash report cleared)</string>
    <string name="crash_report_toast_cleared">Report cleared</string>
    <string name="choose_driver_zip_title">Choose ZIP archive of a Turnip driver</string>
    <string name="error_no_file_manager">File manager is not found</string>
    <string name="toast_installing_driver">Turnip driver install from %s...</string>
    <string name="dialog_driver_installed">Driver successfully installed!</string>
    <string name="dialog_driver_installed_msg">Driver \'%s\' is successfully installed and ready to use with Mesa Zink!</string>
    <string name="dialog_driver_install_failed_title">Install error</string>
    <string name="dialog_driver_install_failed">Failed to install driver: </string>
    <string name="dialog_confirm_delete">Delete selected driver?</string>
    <string name="dialog_delete_driver_prompt">Remove driver %s?</string>
    <string name="toast_driver_removed">Driver removed</string>
    <string name="btn_download_shaders">Download GL Shaders (Shader Cache)</string>
    <string name="desc_download_shaders">Download OpenGL shader cache (GL_Shaders_20260517.pak) to fix graphical glitches</string>
    <string name="dialog_shaders_downloading">Downloading GL shaders...</string>
    <string name="dialog_shaders_success">GL shaders successfully downloaded and installed to FCData!</string>
    <string name="dialog_shaders_failed">Error downloading shaders: </string>
    <string name="dialog_shaders_downloaded_title">Shaders downloaded</string>
    <string name="dialog_shaders_exists_prompt">Shader file already exists (%d KB). Download and replace?</string>
    <string name="toast_specify_game_path_first">Specify Far Cry game path first!</string>
    <string name="error_no_game_folder">No game folder</string>
    <string name="btn_check_updates">Check for Updates</string>
    <string name="toast_update_checking">Checking for updates...</string>
    <string name="toast_update_up_to_date">You already have the latest version installed (%1$s)</string>
    <string name="toast_update_check_failed">Could not check for updates. Check your internet connection</string>
    <string name="dialog_update_title">Update available</string>
    <string name="dialog_update_msg">A new version of NearChuckle is available: %1$s (build %2$d).\n\nInstalled version: %3$s (build %4$d).\n\nDownload and install the update?</string>
    <string name="btn_update_download">Download</string>
    <string name="dialog_update_downloading">Downloading update...</string>
    <string name="dialog_update_downloading_progress">Downloading update: %1$d%% (%2$s of %3$s)</string>
    <string name="toast_update_installing">Update downloaded, starting installer...</string>
    <string name="dialog_update_failed_title">Update error</string>
    <string name="dialog_update_failed_msg">Could not download the update: %1$s</string>
    <string name="dialog_unknown_sources_title">Allow installation</string>
    <string name="dialog_unknown_sources_msg">The update has been downloaded. Allow this app to install unknown apps, then the installer will open automatically.</string>
    <string name="dialog_folder_not_found_title">Folder not found</string>
    <string name="dialog_folder_not_found_msg">Folder with Far Cry data (%s) doesn\'t exist. Choose correct folder with Far Cry game data in it.</string>
    <string name="dialog_storage_permission_title">Read permission</string>
    <string name="dialog_storage_permission_msg">To read Far Cry game data you need to provide permission.</string>
    <string name="btn_permission_allow">Allow</string>
    <string name="btn_permission_continue">Continue</string>
    <string name="dialog_game_files_missing_title">Game files not found</string>
    <string name="dialog_game_files_missing_msg">In folder:\n%s\n\nthere\'s no game data of Far Cry (folders FCData, Levels or files *.pak).\n\nCopy the original Far Cry (for PC) files to this folder.\n\nTry running anyway?</string>
    <string name="error_title">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="switch_auto_launch">Start the game automatically when its files are found</string>
    <string name="desc_auto_launch">Skips this menu at launch. The gear button over the game comes back here.</string>
    <string name="desc_settings_overlay">Settings</string>
    <string name="dialog_back_to_settings_title">Back to the settings?</string>
    <string name="dialog_back_to_settings_msg">The game in progress will be closed.</string>
    <string name="btn_back_to_settings">Settings</string>
    <string name="switch_auto_hide_pad">Hide touch controls when a gamepad is connected</string>
    <string name="btn_resume_game">RESUME THE GAME IN PROGRESS</string>
    <string name="dialog_restart_title">Restart the game?</string>
    <string name="dialog_restart_msg">The game in progress will be closed and started again with the current settings.</string>
    <string name="btn_restart">Restart</string>
    <string name="dialog_pause_title">Game menu</string>
    <string name="pause_back_to_game">Back to the game</string>
    <string name="pause_show_controls">Show the touch controls</string>
    <string name="pause_hide_controls">Hide the touch controls</string>
    <string name="pause_settings">Settings (the game stays paused)</string>
    <string name="pause_quit_game">Quit the game</string>
    <string name="label_video_fit">Videos on screen:</string>
    <string name="video_fit_auto">Automatic (the background is cropped, the others stretched)</string>
    <string name="video_fit_original">Original ratio (black bars)</string>
    <string name="video_fit_fill">Fill the screen (crop the edges)</string>
    <string name="video_fit_stretch">Stretch to the screen</string>
    <string name="btn_gamepad_settings">Gamepad settings (buttons, camera stick speed)</string>
    <string name="pad_title">Gamepad</string>
    <string name="pad_sensitivity">Camera stick speed: %.1f</string>
    <string name="pad_deadzone">Camera stick dead zone: %.2f</string>
    <string name="pad_invert_y">Invert the vertical axis of the camera</string>
    <string name="pad_buttons">Buttons</string>
    <string name="pad_buttons_help">Tap an action, then press the button of your gamepad. The D-pad is the arrow keys unless you give it an action.</string>
    <string name="pad_reset">Reset the buttons</string>
    <string name="pad_press_button">Press the gamepad button for this action.</string>
    <string name="pad_clear">No button</string>
    <string name="pad_none">(none)</string>
    <string name="act_fire">Fire</string>
    <string name="act_aim">Aim</string>
    <string name="act_jump">Jump</string>
    <string name="act_crouch">Crouch</string>
    <string name="act_prone">Prone</string>
    <string name="act_reload">Reload</string>
    <string name="act_use">Use</string>
    <string name="act_sprint">Sprint</string>
    <string name="act_grenade">Grenade</string>
    <string name="act_menu">Menu (Esc)</string>
    <string name="act_objectives">Objectives (Tab)</string>
    <string name="act_flashlight">Flashlight</string>
    <string name="act_binoculars">Binoculars</string>
    <string name="act_nightvision">Night vision</string>
    <string name="act_weapon_next">Next weapon</string>
    <string name="btn_close_report">Close</string>
</resources>